--- a/requirements.txt
+++ b/requirements.txt
@@ -16,15 +16,14 @@ httpx==0.25.2
 aiohttp==3.9.1
 requests==2.31.0
 
-# Email and file processing
+# Email validation
 email-validator==2.1.0
-python-email-validator==2.1.0
 
 # Logging and monitoring
 structlog==23.2.0
 
 # CORS
-fastapi-cors==0.0.6
+python-cors==1.0.1
 
 # JSON handling
 orjson==3.9.10
