--- a/requirements.txt
+++ b/requirements.txt
@@ -16,11 +16,15 @@ httpx==0.25.2
 aiohttp==3.9.1
 requests==2.31.0
 
-# Email validation
+# Email and file processing
 email-validator==2.1.0
+python-email-validator==2.1.0
 
 # Logging and monitoring
 structlog==23.2.0
+
+# CORS
+fastapi-cors==0.0.6
 
 # JSON handling
 orjson==3.9.10
