--- a/requirements.txt
+++ b/requirements.txt
@@ -18,13 +18,9 @@ requests==2.31.0
 
 # Email and file processing
 email-validator==2.1.0
-python-email-validator==2.1.0
 
 # Logging and monitoring
 structlog==23.2.0
-
-# CORS
-fastapi-cors==0.0.6
 
 # JSON handling
 orjson==3.9.10
@@ -35,6 +31,11 @@ python-dateutil==2.8.2
 # PDF processing
 pdfplumber==0.10.3
 PyMuPDF==1.23.21
+
+# Document processing (optional)
+python-docx==0.8.11
+openpyxl==3.1.2
+pandas==2.1.4
 
 # Environment and config
 python-dotenv==1.0.0
